--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "seed": "node utils/seed.js",
     "dev": "nodemon index.js"
   },
@@ -14,5 +14,10 @@
     "url": "mynamebrogrammer"
   },
   "author": "Habib Maksoud",
-  "license": "ISC"
+  "license": "ISC",
+
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongodb": "^4.5.0"
+  }
 }
