--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^4.5.0",
+    "mongoose": "^7.1.0",
     "nodemon": "^2.0.22"
   }
 }
